<?xml version="1.0" encoding="utf-8"?>
<resources>

  
    <string name="app_name">ImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="query_hint">Enter Search Term</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="search_options">Advanced Search Options</string>
    <string name="save">Save</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="size_prompt">Choose Image Size</string>
    <string name="color_prompt">Choose Image Color</string>
    <string name="type_prompt">Choose Image Type</string>

    <string-array name="icon_size_array">
        <item>""</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>
    <string-array name="image_type_array">
        <item>""</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
    <string-array name="image_color_array">
        <item>""</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fragment_dialog">FragmentDialogActivity</string>
    
    
</resources>
